Fix header logo blurriness by simplifying CSS approach to match footer

--- a/src/scss/modern.scss
+++ b/src/scss/modern.scss
@@ -445,24 +445,26 @@ p {
     
     .gatsby-image-wrapper {
       width: 100%;
-      height: 100%;
+      height: auto;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       
       img {
-        width: 100% !important;
+        width: auto !important;
         height: auto !important;
-        max-width: 280px;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
       }
     }
     
     @media (max-width: 768px) {
-      max-width: 180px;
+      max-width: 200px;
       align-self: center;
       
       .gatsby-image-wrapper img {
-        max-width: 160px;
+        max-width: 100%;
       }
     }
   }
@@ -811,14 +813,14 @@ p {
   text-align: left;
   position: relative;
   background: $background-color;
-  padding: 1rem 0 1rem 0;
+  padding: 2rem 0 1rem 0;
   
   @media (max-width: 768px) {
-    padding: 1rem 0 1rem 0;
+    padding: 2rem 0 1rem 0;
   }
   
   @media (max-width: 480px) {
-    padding: 1rem 0 1rem 0;
+    padding: 2rem 0 1rem 0;
   }
   
   /* Override global font variables for hero title */
